@@ -3,8 +3,10 @@
  */
 package com.pingidentity.ps.oidf.federation;
 
+import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
@@ -13,66 +15,66 @@ import java.util.Objects;
 import java.util.Set;
 
 /**
- * An OpenID Federation 1.0 {@code metadata_policy}, composed down a trust chain and applied to an
- * entity's metadata.
+ * An OpenID Federation 1.0 {@code metadata_policy} for one Entity Type, composed down a trust chain and
+ * applied to an entity's metadata.
  *
- * <p>A policy narrows what a subordinate may be. Composition runs from the trust anchor downwards, and
- * the resulting policy is applied to the leaf's own metadata to produce the metadata a relying party
- * may actually act on. A bug that silently <em>widens</em> scope here is the worst outcome in this
- * subsystem, so every ambiguous case refuses instead.
- *
- * <h2>What is verified, and what is not</h2>
- *
- * <p>Verified against OpenID Federation 1.0 Final:
- * <ul>
- *   <li>the operator set — {@code value}, {@code add}, {@code default}, {@code one_of},
- *       {@code subset_of}, {@code superset_of}, {@code essential} (§6.1.3.1);</li>
- *   <li>the application order, quoted: <em>"The operators MUST be applied in this order: value,
- *       default, one_of, subset_of, superset_of, add, essential"</em> (§6.1.4.1) — note {@code add}
- *       runs near the end, not second;</li>
- *   <li>{@code metadata_policy_crit}: an unrecognised critical operator makes the subordinate
- *       statement invalid (§3.1.3).</li>
- * </ul>
- *
- * <p><strong>Not verified:</strong> the normative per-operator merge table in §6.1.4. Both published
- * renderings of the specification truncate before that section, so it could not be read. Rather than
- * guess it, {@link #composeWith} implements rules chosen to be <em>no more permissive than any
- * plausible reading</em>:
+ * <p>Everything here follows the Final text (17 February 2026), §6.1.3 to §6.1.4, read verbatim:
  *
  * <ul>
- *   <li>{@code one_of} and {@code subset_of} intersect — the only merge of two restrictions that
- *       narrows;</li>
- *   <li>{@code superset_of} unions — demanding more required values is stricter, not looser;</li>
- *   <li>{@code essential} is a logical OR — once a superior requires a parameter, a subordinate cannot
- *       drop it;</li>
- *   <li>{@code value} and {@code default} must be identical or the composition is refused;</li>
- *   <li>{@code add} is the genuinely ambiguous one: adding values to {@code grant_types} would widen
- *       while adding to {@code contacts} would not. A subordinate {@code add} is therefore accepted
- *       only when it is a subset of the superior's, and refused otherwise.</li>
+ *   <li><b>Operators</b> (§6.1.3.1): {@code value}, {@code add}, {@code default}, {@code one_of},
+ *       {@code subset_of}, {@code superset_of}, {@code essential}. Each operator's definition gives its
+ *       "Order of application", and they chain: {@code value} "First", {@code add} "After value",
+ *       {@code default} "After add", {@code one_of} "After default", {@code subset_of} "After one_of",
+ *       {@code superset_of} "After subset_of", {@code essential} "Last".</li>
+ *   <li><b>Merge</b> (each operator's "Operator value merge"): {@code value} and {@code default} must be
+ *       equal; {@code add} and {@code superset_of} take the union; {@code one_of} and {@code subset_of}
+ *       the intersection, which is an error for {@code one_of} when empty and allowed to be {@code []} for
+ *       {@code subset_of}; {@code essential} is the logical OR.</li>
+ *   <li><b>Combinations</b> (each operator's "Combination with other operators"): checked on every parsed
+ *       and every merged parameter policy (§6.1.4.1), for example {@code add} ⊆ {@code value},
+ *       {@code subset_of} ⊇ {@code superset_of}, and {@code one_of} alongside nothing but {@code value},
+ *       {@code default} and {@code essential}. A combination that is not allowed is a policy error.</li>
+ *   <li><b>Types</b>: the JSON types each operator is "Mandatory to support", plus numbers where they are
+ *       "Optional to support". So {@code add}, {@code one_of}, {@code subset_of} and {@code superset_of}
+ *       take arrays of strings or of numbers, and {@code one_of} checks a string or a number. Objects are
+ *       optional everywhere but {@code essential} and are refused, as is any type an operator does not
+ *       list - §6.1.3 makes an unsupported type a policy error, for the operand and the parameter alike.
+ *       Numbers compare by value, so {@code 1} equals {@code 1.0}.</li>
+ *   <li><b>{@code null}</b> is a value, not an absence: {@code value: null} removes the parameter, and
+ *       no operator outputs a {@code null} parameter (§6.1.3).</li>
+ *   <li><b>{@code scope}</b> is "regarded and processed as a string array" and written back as a
+ *       space-separated string (§6.1.3.1.8).</li>
+ *   <li><b>Additional operators</b> (§6.1.3.2) are ignored unless declared critical; this
+ *       implementation understands none, so a non-empty {@code metadata_policy_crit} is always a policy
+ *       error (§3.1.3).</li>
  * </ul>
  *
- * <p>Where these are stricter than the specification the cost is availability — a chain is refused
- * that ought to resolve — which is recoverable. The opposite error is not. See
- * {@code docs/unverified.md}.
+ * <p>Earlier revisions of this class quoted a sentence from §6.1.4.1 ordering the operators
+ * {@code value, default, one_of, subset_of, superset_of, add, essential}. The Final text has no such
+ * sentence; the order above is the one its operator definitions give. The two differ observably when
+ * {@code default} and {@code add} both apply to an absent parameter.
  */
 public final class MetadataPolicy {
 
-    /** Operators this implementation understands. Anything else is unknown. */
+    /** The standard operators. Anything else is an additional operator (§6.1.3.2). */
     public static final Set<String> KNOWN_OPERATORS =
             Set.of("value", "add", "default", "one_of", "subset_of", "superset_of", "essential");
 
-    /**
-     * Application order, quoted from §6.1.4.1. Deliberately a list rather than the declaration order of
-     * a map: applying {@code add} before {@code subset_of} would let an added value escape the subset
-     * check.
-     */
+    /** Application order, from each operator's "Order of application" in §6.1.3.1. */
     static final List<String> APPLICATION_ORDER =
-            List.of("value", "default", "one_of", "subset_of", "superset_of", "add", "essential");
+            List.of("value", "add", "default", "one_of", "subset_of", "superset_of", "essential");
 
-    /** parameter name → (operator → operand) */
-    private final Map<String, Map<String, Object>> byParameter;
+    /** The one metadata parameter operators treat as a string array although it is a string. */
+    static final String SCOPE = "scope";
 
-    private MetadataPolicy(Map<String, Map<String, Object>> byParameter) {
+    /** An operator's configured value; {@code value} may be {@code null}, which is JSON null. */
+    private record Operand(Object value) {
+    }
+
+    /** parameter name → (operator → operand), operators in the order they were declared */
+    private final Map<String, Map<String, Operand>> byParameter;
+
+    private MetadataPolicy(Map<String, Map<String, Operand>> byParameter) {
         this.byParameter = byParameter;
     }
 
@@ -81,202 +83,212 @@ public final class MetadataPolicy {
     }
 
     /**
-     * Reads a {@code metadata_policy} for one entity type.
+     * Reads a {@code metadata_policy} for one Entity Type.
      *
-     * @param policy the raw policy object, e.g. the value of {@code metadata_policy.openid_provider}
-     * @param critical the statement's {@code metadata_policy_crit}, or null
-     * @throws PolicyException when a critical operator is not understood — §3.1.3 makes the statement
-     *                         invalid, so this refuses rather than ignoring it
+     * @param policy   the raw policy object, e.g. the value of {@code metadata_policy.openid_provider}
+     * @param critical the additional operators declared critical anywhere in the chain
+     *                 ({@code metadata_policy_crit}, collected first per §6.1.4.1), or null
+     * @throws PolicyException when a critical operator is named (this implementation understands no
+     *                         additional operators, and a standard one may not be listed), an operand has a
+     *                         type the operator does not support, or the operators may not be combined
      */
     @SuppressWarnings("unchecked")
     public static MetadataPolicy parse(Map<String, Object> policy, Collection<String> critical)
             throws PolicyException {
         if (critical != null) {
             for (String operator : critical) {
-                if (!KNOWN_OPERATORS.contains(operator)) {
-                    throw new PolicyException("metadata_policy_crit names an operator this "
-                            + "implementation does not understand: " + operator
-                            + " — the subordinate statement is invalid");
+                if (KNOWN_OPERATORS.contains(operator)) {
+                    throw new PolicyException("metadata_policy_crit names the standard operator '" + operator
+                            + "'; it may list only additional operators (OpenID Federation 1.0 §3.1.3)");
                 }
+                throw new PolicyException("metadata_policy_crit names an operator this implementation does not"
+                        + " understand: " + operator + " - the statement and its trust chain are invalid (§3.1.3)");
             }
         }
         if (policy == null || policy.isEmpty()) {
             return empty();
         }
-        Map<String, Map<String, Object>> parsed = new LinkedHashMap<>();
+        Map<String, Map<String, Operand>> parsed = new LinkedHashMap<>();
         for (Map.Entry<String, Object> entry : policy.entrySet()) {
+            String parameter = entry.getKey();
             if (!(entry.getValue() instanceof Map)) {
-                throw new PolicyException("metadata_policy entry '" + entry.getKey()
-                        + "' is not an object");
+                throw new PolicyException("metadata_policy entry '" + parameter + "' is not an object");
             }
-            parsed.put(entry.getKey(), new LinkedHashMap<>((Map<String, Object>) entry.getValue()));
+            Map<String, Operand> operators = new LinkedHashMap<>();
+            for (Map.Entry<String, Object> op : ((Map<String, Object>) entry.getValue()).entrySet()) {
+                if (!KNOWN_OPERATORS.contains(op.getKey())) {
+                    // §6.1.3.2: an additional operator that is not critical MUST be ignored.
+                    continue;
+                }
+                Object operand = normalizeOperand(parameter, op.getKey(), op.getValue());
+                checkOperandType(parameter, op.getKey(), operand);
+                operators.put(op.getKey(), new Operand(operand));
+            }
+            checkCombinations(parameter, operators);
+            if (!operators.isEmpty()) {
+                parsed.put(parameter, operators);
+            }
         }
         return new MetadataPolicy(parsed);
     }
 
     /**
-     * Composes this policy (from a superior) with a subordinate's, producing the policy that applies
-     * further down the chain.
+     * Merges a subordinate's policy into this (superior) one, per §6.1.4.1: parameters only one side has
+     * are copied; operators both sides have are merged by the operator's own rule; the result is checked
+     * for allowed combinations.
      *
-     * <p>Composition can only narrow. Every rule below is chosen so the result constrains at least as
-     * much as this policy does — see the class javadoc for which of them are verified.
-     *
-     * @throws PolicyException on any conflict, or any attempt by the subordinate to widen
+     * @throws PolicyException when an operator value merge is not allowed or the merged combination is not
      */
     public MetadataPolicy composeWith(MetadataPolicy subordinate) throws PolicyException {
         Objects.requireNonNull(subordinate, "subordinate");
-        Map<String, Map<String, Object>> composed = new LinkedHashMap<>();
+        Map<String, Map<String, Operand>> composed = new LinkedHashMap<>();
         Set<String> parameters = new LinkedHashSet<>(this.byParameter.keySet());
         parameters.addAll(subordinate.byParameter.keySet());
-
         for (String parameter : parameters) {
-            Map<String, Object> superiorOps = this.byParameter.getOrDefault(parameter, Map.of());
-            Map<String, Object> subordinateOps = subordinate.byParameter.getOrDefault(parameter, Map.of());
-            composed.put(parameter, composeOperators(parameter, superiorOps, subordinateOps));
+            Map<String, Operand> superior = this.byParameter.get(parameter);
+            Map<String, Operand> sub = subordinate.byParameter.get(parameter);
+            if (superior == null) {
+                composed.put(parameter, sub);
+            } else if (sub == null) {
+                composed.put(parameter, superior);
+            } else {
+                Map<String, Operand> merged = mergeOperators(parameter, superior, sub);
+                checkCombinations(parameter, merged);
+                composed.put(parameter, merged);
+            }
         }
         return new MetadataPolicy(composed);
     }
 
-    private static Map<String, Object> composeOperators(String parameter, Map<String, Object> superior,
-                                                        Map<String, Object> subordinate)
-            throws PolicyException {
-        Map<String, Object> out = new LinkedHashMap<>();
-        Set<String> operators = new LinkedHashSet<>(superior.keySet());
-        operators.addAll(subordinate.keySet());
-
-        for (String operator : operators) {
-            Object sup = superior.get(operator);
-            Object sub = subordinate.get(operator);
+    private static Map<String, Operand> mergeOperators(String parameter, Map<String, Operand> superior,
+                                                       Map<String, Operand> subordinate) throws PolicyException {
+        Map<String, Operand> out = new LinkedHashMap<>(superior);
+        for (Map.Entry<String, Operand> entry : subordinate.entrySet()) {
+            String operator = entry.getKey();
+            Operand sub = entry.getValue();
+            Operand sup = superior.get(operator);
             if (sup == null) {
                 out.put(operator, sub);
                 continue;
             }
-            if (sub == null) {
-                out.put(operator, sup);
-                continue;
-            }
             switch (operator) {
                 case "value", "default" -> {
-                    // A differing value from a subordinate is not a narrowing, it is a disagreement.
-                    if (!Objects.equals(sup, sub)) {
+                    if (!jsonEquals(sup.value(), sub.value())) {
                         throw new PolicyException("policy conflict on '" + parameter + "." + operator
-                                + "': superior says " + sup + ", subordinate says " + sub);
+                                + "': the superior says " + sup.value() + ", the subordinate says " + sub.value()
+                                + " (the values MUST be equal)");
                     }
-                    out.put(operator, sup);
                 }
-                case "one_of", "subset_of" -> {
-                    List<Object> intersection = intersect(asList(parameter, operator, sup),
-                            asList(parameter, operator, sub));
+                case "add", "superset_of" -> out.put(operator, new Operand(union(list(sup), list(sub))));
+                case "one_of" -> {
+                    List<Object> intersection = intersect(list(sup), list(sub));
                     if (intersection.isEmpty()) {
-                        // Nothing satisfies both, so nothing may pass. Refuse rather than resolve to
-                        // an empty restriction that some readings would treat as "unrestricted".
-                        throw new PolicyException("policy conflict on '" + parameter + "." + operator
-                                + "': the superior and subordinate restrictions do not overlap");
+                        throw new PolicyException("policy conflict on '" + parameter + ".one_of': the superior's and"
+                                + " the subordinate's values do not overlap (an empty intersection MUST be an error)");
                     }
-                    out.put(operator, intersection);
+                    out.put(operator, new Operand(intersection));
                 }
-                case "superset_of" -> out.put(operator, union(asList(parameter, operator, sup),
-                        asList(parameter, operator, sub)));
-                case "essential" -> out.put(operator, truthy(sup) || truthy(sub));
-                case "add" -> {
-                    // The ambiguous case. Adding to grant_types widens; adding to contacts does not.
-                    // Accept a subordinate add only when it introduces nothing new.
-                    List<Object> supValues = asList(parameter, operator, sup);
-                    List<Object> subValues = asList(parameter, operator, sub);
-                    if (!supValues.containsAll(subValues)) {
-                        List<Object> extra = new ArrayList<>(subValues);
-                        extra.removeAll(supValues);
-                        throw new PolicyException("subordinate policy adds values to '" + parameter
-                                + "' that the superior does not: " + extra
-                                + " — a subordinate cannot widen a superior's policy");
-                    }
-                    out.put(operator, supValues);
-                }
-                default -> throw new PolicyException(
-                        "unknown policy operator '" + operator + "' on '" + parameter + "'");
+                case "subset_of" -> out.put(operator, new Operand(intersect(list(sup), list(sub))));
+                default -> out.put(operator, new Operand((Boolean) sup.value() || (Boolean) sub.value()));
             }
         }
         return out;
     }
 
     /**
-     * Applies the composed policy to an entity's metadata.
+     * Applies this policy to an entity's metadata for its Entity Type (§6.1.4.2), operator by operator in
+     * {@link #APPLICATION_ORDER}.
      *
      * @return the resolved metadata a relying party may act on
-     * @throws PolicyException when the metadata violates the policy — an unmet policy must refuse,
-     *                         never fall through with the offending value intact
+     * @throws PolicyException when the metadata violates the policy or has a type an operator does not
+     *                         support - resolved metadata that is "illegal or otherwise incorrect ... MUST
+     *                         NOT be used"
      */
     public Map<String, Object> apply(Map<String, Object> metadata) throws PolicyException {
         Map<String, Object> resolved = new LinkedHashMap<>(metadata == null ? Map.of() : metadata);
-
-        for (Map.Entry<String, Map<String, Object>> entry : this.byParameter.entrySet()) {
+        for (Map.Entry<String, Map<String, Operand>> entry : this.byParameter.entrySet()) {
             String parameter = entry.getKey();
-            Map<String, Object> operators = entry.getValue();
-
+            Map<String, Operand> operators = entry.getValue();
+            boolean scope = SCOPE.equals(parameter);
+            boolean present = resolved.containsKey(parameter);
+            if (present && resolved.get(parameter) == null) {
+                throw new PolicyException("'" + parameter + "' is null, which no operator supports and metadata"
+                        + " may not use (§5)");
+            }
+            Object current = present ? metadataValue(parameter, resolved.get(parameter)) : null;
             for (String operator : APPLICATION_ORDER) {
-                if (!operators.containsKey(operator)) {
+                Operand operand = operators.get(operator);
+                if (operand == null) {
                     continue;
                 }
-                Object operand = operators.get(operator);
+                Object value = operand.value();
                 switch (operator) {
-                    case "value" -> resolved.put(parameter, operand);
-                    case "default" -> {
-                        if (resolved.get(parameter) == null) {
-                            resolved.put(parameter, operand);
-                        }
-                    }
-                    case "one_of" -> {
-                        Object current = resolved.get(parameter);
-                        if (current != null && !asList(parameter, operator, operand).contains(current)) {
-                            throw new PolicyException("'" + parameter + "' is " + current
-                                    + ", which is not one_of " + operand);
-                        }
-                    }
-                    case "subset_of" -> {
-                        Object current = resolved.get(parameter);
-                        if (current != null) {
-                            List<Object> allowed = asList(parameter, operator, operand);
-                            List<Object> present = asList(parameter, parameter, current);
-                            List<Object> kept = new ArrayList<>(present);
-                            kept.retainAll(allowed);
-                            if (kept.isEmpty()) {
-                                // Every value was disallowed. Leaving an empty array would let a caller
-                                // read "no restrictions" from what is actually "nothing permitted".
-                                throw new PolicyException("'" + parameter + "' retains no values after "
-                                        + "subset_of " + operand);
-                            }
-                            resolved.put(parameter, kept);
-                        }
-                    }
-                    case "superset_of" -> {
-                        List<Object> required = asList(parameter, operator, operand);
-                        Object current = resolved.get(parameter);
-                        List<Object> present = current == null
-                                ? List.of() : asList(parameter, parameter, current);
-                        if (!present.containsAll(required)) {
-                            throw new PolicyException("'" + parameter + "' does not contain every value "
-                                    + "required by superset_of " + operand);
+                    case "value" -> {
+                        requireScalarOrArray(parameter, operator, present, current);
+                        if (value == null) {
+                            present = false;
+                            current = null;
+                        } else {
+                            present = true;
+                            current = value;
                         }
                     }
                     case "add" -> {
-                        Object current = resolved.get(parameter);
-                        List<Object> merged = new ArrayList<>(current == null
-                                ? List.of() : asList(parameter, parameter, current));
-                        for (Object value : asList(parameter, operator, operand)) {
-                            if (!merged.contains(value)) {
-                                merged.add(value);
+                        if (!present) {
+                            present = true;
+                            current = new ArrayList<>(list(operand));
+                        } else {
+                            List<Object> values = requireArray(parameter, operator, current);
+                            for (Object v : list(operand)) {
+                                if (!containsJson(values, v)) {
+                                    values.add(v);
+                                }
+                            }
+                            current = values;
+                        }
+                    }
+                    case "default" -> {
+                        requireScalarOrArray(parameter, operator, present, current);
+                        if (!present) {
+                            present = true;
+                            current = value;
+                        }
+                    }
+                    case "one_of" -> {
+                        if (present) {
+                            if (!(current instanceof String) && !(current instanceof Number)) {
+                                throw new PolicyException("'" + parameter + "' is not a string or a number, so one_of"
+                                        + " cannot check it");
+                            }
+                            if (!containsJson(list(operand), current)) {
+                                throw new PolicyException("'" + parameter + "' is " + current + ", which is not one_of "
+                                        + value);
                             }
                         }
-                        resolved.put(parameter, merged);
                     }
-                    case "essential" -> {
-                        if (truthy(operand) && resolved.get(parameter) == null) {
-                            throw new PolicyException("'" + parameter
-                                    + "' is essential but absent from the resolved metadata");
+                    case "subset_of" -> {
+                        if (present) {
+                            current = intersect(requireArray(parameter, operator, current), list(operand));
                         }
                     }
-                    default -> throw new PolicyException("unknown policy operator: " + operator);
+                    case "superset_of" -> {
+                        if (present && !containsAllJson(requireArray(parameter, operator, current), list(operand))) {
+                            throw new PolicyException("'" + parameter + "' does not contain every value required by"
+                                    + " superset_of " + value);
+                        }
+                    }
+                    default -> {
+                        if (Boolean.TRUE.equals(value) && !present) {
+                            throw new PolicyException("'" + parameter + "' is essential but absent from the resolved"
+                                    + " metadata");
+                        }
+                    }
                 }
+            }
+            if (present) {
+                resolved.put(parameter, scope ? joinScope(current) : current);
+            } else {
+                resolved.remove(parameter);
             }
         }
         return resolved;
@@ -284,54 +296,265 @@ public final class MetadataPolicy {
 
     /** The parameters this policy constrains. */
     public Set<String> parameters() {
-        return Set.copyOf(this.byParameter.keySet());
+        return Collections.unmodifiableSet(new LinkedHashSet<>(this.byParameter.keySet()));
     }
 
-    /** The operators applying to one parameter, for inspection and tests. */
+    /** The operators applying to one parameter, as JSON values ({@code null} for a {@code value: null}). */
     public Map<String, Object> operatorsFor(String parameter) {
-        return Map.copyOf(this.byParameter.getOrDefault(parameter, Map.of()));
+        Map<String, Object> out = new LinkedHashMap<>();
+        for (Map.Entry<String, Operand> op : this.byParameter.getOrDefault(parameter, Map.of()).entrySet()) {
+            out.put(op.getKey(), op.getValue().value());
+        }
+        return Collections.unmodifiableMap(out);
+    }
+
+    /** The policy as the raw {@code metadata_policy.<type>} JSON structure. */
+    public Map<String, Object> toRawMap() {
+        Map<String, Object> out = new LinkedHashMap<>();
+        for (String parameter : this.byParameter.keySet()) {
+            out.put(parameter, this.operatorsFor(parameter));
+        }
+        return Collections.unmodifiableMap(out);
     }
 
     public boolean isEmpty() {
         return this.byParameter.isEmpty();
     }
 
+    // ---- validation -----------------------------------------------------------------------------
+
+    /** {@code scope} operands written as space-separated strings are read as arrays (§6.1.3.1.8). */
+    private static Object normalizeOperand(String parameter, String operator, Object operand) {
+        if (SCOPE.equals(parameter) && operand instanceof String s && !"essential".equals(operator)) {
+            return splitScope(s);
+        }
+        return operand;
+    }
+
+    private static void checkOperandType(String parameter, String operator, Object operand) throws PolicyException {
+        String at = "'" + parameter + "." + operator + "'";
+        switch (operator) {
+            case "value" -> {
+                if (operand != null && !isScalar(operand) && !isScalarArray(operand)) {
+                    throw new PolicyException(at + " must be a string, number, boolean, array or null");
+                }
+            }
+            case "default" -> {
+                if (operand == null || !isScalar(operand) && !isScalarArray(operand)) {
+                    throw new PolicyException(at + " must be a string, number, boolean or array");
+                }
+            }
+            case "essential" -> {
+                if (!(operand instanceof Boolean)) {
+                    throw new PolicyException(at + " must be a boolean");
+                }
+            }
+            default -> {
+                if (!isStringOrNumberArray(operand)) {
+                    throw new PolicyException(at + " must be an array of strings or an array of numbers");
+                }
+            }
+        }
+    }
+
+    /** The "Combination with other operators" rules of §6.1.3.1, on one parameter policy. */
+    private static void checkCombinations(String parameter, Map<String, Operand> operators) throws PolicyException {
+        Operand value = operators.get("value");
+        Operand add = operators.get("add");
+        Operand def = operators.get("default");
+        Operand oneOf = operators.get("one_of");
+        Operand subsetOf = operators.get("subset_of");
+        Operand supersetOf = operators.get("superset_of");
+        Operand essential = operators.get("essential");
+        String at = "'" + parameter + "': ";
+        if (oneOf != null && (add != null || subsetOf != null || supersetOf != null)) {
+            throw new PolicyException(at + "one_of may be combined only with value, default and essential");
+        }
+        if (value != null) {
+            if (add != null && (value.value() == null || !containsAllJson(valuesOf(value), list(add)))) {
+                throw new PolicyException(at + "the values of add MUST be a subset of the values of value");
+            }
+            if (def != null && value.value() == null) {
+                throw new PolicyException(at + "default may be combined with value only if value is not null");
+            }
+            if (oneOf != null && (value.value() == null || value.value() instanceof List
+                    || !containsJson(list(oneOf), value.value()))) {
+                throw new PolicyException(at + "the value of value MUST be among the one_of values");
+            }
+            if (subsetOf != null && (value.value() == null || !containsAllJson(list(subsetOf), valuesOf(value)))) {
+                throw new PolicyException(at + "the values of value MUST be a subset of the values of subset_of");
+            }
+            if (supersetOf != null && (value.value() == null || !containsAllJson(valuesOf(value), list(supersetOf)))) {
+                throw new PolicyException(at + "the values of value MUST be a superset of the values of superset_of");
+            }
+            if (essential != null && value.value() == null && Boolean.TRUE.equals(essential.value())) {
+                throw new PolicyException(at + "value null may not be combined with essential true");
+            }
+        }
+        if (add != null && subsetOf != null && !containsAllJson(list(subsetOf), list(add))) {
+            throw new PolicyException(at + "the values of add MUST be a subset of the values of subset_of");
+        }
+        if (subsetOf != null && supersetOf != null && !containsAllJson(list(subsetOf), list(supersetOf))) {
+            throw new PolicyException(at + "the values of subset_of MUST be a superset of the values of superset_of");
+        }
+    }
+
     // ---- helpers ------------------------------------------------------------------------------
 
-    private static List<Object> asList(String parameter, String operator, Object value)
+    /** The metadata parameter as operators see it: {@code scope} split into an array. */
+    private static Object metadataValue(String parameter, Object raw) {
+        if (SCOPE.equals(parameter) && raw instanceof String s) {
+            return splitScope(s);
+        }
+        return raw;
+    }
+
+    private static List<Object> splitScope(String scope) {
+        List<Object> values = new ArrayList<>();
+        for (String s : scope.trim().split("\\s+")) {
+            if (!s.isEmpty() && !values.contains(s)) {
+                values.add(s);
+            }
+        }
+        return values;
+    }
+
+    private static Object joinScope(Object value) {
+        if (!(value instanceof List<?> values)) {
+            return value;
+        }
+        StringBuilder joined = new StringBuilder();
+        for (Object v : values) {
+            if (joined.length() > 0) {
+                joined.append(' ');
+            }
+            joined.append(v);
+        }
+        return joined.toString();
+    }
+
+    private static List<Object> requireArray(String parameter, String operator, Object current) throws PolicyException {
+        if (!isStringOrNumberArray(current)) {
+            throw new PolicyException("'" + parameter + "' is not an array of strings or an array of numbers, which "
+                    + operator + " requires");
+        }
+        return new ArrayList<>((List<?>) current);
+    }
+
+    /** {@code value} and {@code default} support a string, number, boolean or array parameter. */
+    private static void requireScalarOrArray(String parameter, String operator, boolean present, Object current)
             throws PolicyException {
-        if (value instanceof List) {
-            return List.copyOf((List<?>) value);
+        if (present && !isScalar(current) && !(current instanceof List)) {
+            throw new PolicyException("'" + parameter + "' is an object, which " + operator + " does not support");
         }
-        if (value == null) {
-            return List.of();
+    }
+
+    /** An array operator's operand, which {@link #checkOperandType} has already proved is an array. */
+    @SuppressWarnings("unchecked")
+    private static List<Object> list(Operand operand) {
+        return (List<Object>) operand.value();
+    }
+
+    /** The values of a non-null {@code value} operand as a set: an array's members, or the scalar itself. */
+    @SuppressWarnings("unchecked")
+    private static List<Object> valuesOf(Operand operand) {
+        return operand.value() instanceof List ? (List<Object>) operand.value() : List.of(operand.value());
+    }
+
+    private static boolean isScalar(Object value) {
+        return value instanceof String || value instanceof Number || value instanceof Boolean;
+    }
+
+    private static boolean isScalarArray(Object value) {
+        if (!(value instanceof List<?> values)) {
+            return false;
         }
-        // A scalar where an array belongs: treat as a single value rather than rejecting, since
-        // metadata frequently carries a lone string where the policy expects a list.
-        if (!(value instanceof Map)) {
-            return List.of(value);
+        for (Object v : values) {
+            if (!(v instanceof String) && !(v instanceof Number) && !(v instanceof Boolean)) {
+                return false;
+            }
         }
-        throw new PolicyException("'" + parameter + "." + operator + "' expects an array, got an object");
+        return true;
+    }
+
+    /** An array of strings or an array of numbers - the array types §6.1.3.1 lists; {@code []} is both. */
+    private static boolean isStringOrNumberArray(Object value) {
+        if (!(value instanceof List<?> values)) {
+            return false;
+        }
+        boolean strings = true;
+        boolean numbers = true;
+        for (Object v : values) {
+            strings &= v instanceof String;
+            numbers &= v instanceof Number;
+        }
+        return strings || numbers;
     }
 
     private static List<Object> intersect(List<Object> a, List<Object> b) {
-        List<Object> out = new ArrayList<>(a);
-        out.retainAll(b);
+        List<Object> out = new ArrayList<>();
+        for (Object v : a) {
+            if (containsJson(b, v) && !containsJson(out, v)) {
+                out.add(v);
+            }
+        }
         return out;
     }
 
     private static List<Object> union(List<Object> a, List<Object> b) {
-        List<Object> out = new ArrayList<>(a);
+        List<Object> out = new ArrayList<>();
+        for (Object value : a) {
+            if (!containsJson(out, value)) {
+                out.add(value);
+            }
+        }
         for (Object value : b) {
-            if (!out.contains(value)) {
+            if (!containsJson(out, value)) {
                 out.add(value);
             }
         }
         return out;
     }
 
-    private static boolean truthy(Object value) {
-        return value instanceof Boolean b ? b : Boolean.parseBoolean(String.valueOf(value));
+    private static boolean containsJson(List<?> values, Object candidate) {
+        for (Object v : values) {
+            if (jsonEquals(v, candidate)) {
+                return true;
+            }
+        }
+        return false;
+    }
+
+    private static boolean containsAllJson(List<?> values, List<?> candidates) {
+        for (Object candidate : candidates) {
+            if (!containsJson(values, candidate)) {
+                return false;
+            }
+        }
+        return true;
+    }
+
+    /** JSON equality: numbers by value (a parser may give {@code 1} and {@code 1.0} different classes). */
+    private static boolean jsonEquals(Object a, Object b) {
+        if (a instanceof Number x && b instanceof Number y) {
+            try {
+                return new BigDecimal(x.toString()).compareTo(new BigDecimal(y.toString())) == 0;
+            } catch (NumberFormatException notJson) {
+                return x.equals(y); // NaN or an infinity, which no JSON document can carry
+            }
+        }
+        if (a instanceof List<?> x && b instanceof List<?> y) {
+            if (x.size() != y.size()) {
+                return false;
+            }
+            for (int i = 0; i < x.size(); i++) {
+                if (!jsonEquals(x.get(i), y.get(i))) {
+                    return false;
+                }
+            }
+            return true;
+        }
+        return Objects.equals(a, b);
     }
 
     /** A policy could not be composed, or metadata did not satisfy it. Always fail closed. */
